# particleini

./: README.md  meson.build  package.cpp  package.yaml  particleini.cpp  particleini.hpp  pini-test.cpp  test.ini
